[package]
name = "geyserbench"
version = "1.0.0"
edition = "2024"

[dependencies]
serde = "1.0.217"
yellowstone-grpc-proto = "5.0.0"
toml = "0.8.20"
env = "1.0.1"
env_logger = "0.11.6"
tokio = { version = "1.43.0", features = ["full"] }
yellowstone-grpc-client = "5.0.0"
tonic = "0.12.3"
log = "0.4.25"
futures = "0.3.31"
futures-util = "0.3.31"
bs58 = "0.5.1"
bytes = "1.10.0"