[package]
name = "geyserbench"
version = "0.1.1"
edition = "2021"

[dependencies]
yellowstone-grpc-proto = "5.0.0"
yellowstone-grpc-client = "5.0.0"
tokio-stream = "0.1.17"

prost = "0.13.1"
prost-types = "0.13.3"
prost_011 = { package = "prost", version = "0.11.9" }

serde = "1.0.217"
toml = "0.8.20"
env_logger = "0.11.6"
tokio = { version = "1.43.0", features = ["full"] }
tonic = "0.12.3"
log = "0.4.25"
futures = "0.3.31"
futures-util = "0.3.31"
bs58 = "0.5.1"
bytes = "1.10.0"

lazy_static = "1.5.0"

[build-dependencies]
anyhow = "1.0.62"
tonic-build = "0.12.3"

[target.'cfg(windows)'.build-dependencies]
powershell_script = "1.1.0"

[target.'cfg(not(windows))'.build-dependencies]
protobuf-src = "1.1.0"
